# GameEngine

./: .gitignore  CMakeLists.txt  build.ps1
Asset/Scene/Test/MeetMat/: MeetMat.gltf
Asset/Shader/HLSL/: basic.h  basic.ps  basic.vs  forward_base.h  forward_base.ps  forward_base.vs  forward_shading.ps  rect.ps  screen_space_shadow.ps  shadow_caster.h  shadow_caster.vs  ssao.ps
Engine/: CMakeLists.txt
Engine/Common/: BaseApplication.cpp  BaseApplication.h  CMakeLists.txt  DrawingManager.cpp  DrawingManager.h  DrawingSystem.cpp  DrawingSystem.h  ECSWorld.cpp  ECSWorld.h  EntityPool.cpp  EntityPool.h  Event.cpp  Event.h  EventManager.cpp  EventManager.h  Global.cpp  Global.h  Input.cpp  Input.h  InputManager.cpp  InputManager.h  LogSystem.h  Setup.h  main.cpp
Engine/Component/: MeshRendererComponent.cpp  MeshRendererComponent.h  SkyboxComponent.cpp  SkyboxComponent.h
Engine/Entity/: CMakeLists.txt  Component.h  ECSSystem.h  Entity.cpp  Entity.h  Material.cpp  Material.h  Mesh.h  Texture.cpp  Texture.h
Engine/Entity/Import/: GLTF2Loader.cpp
Engine/Entity/Material/: SkyboxMaterial.cpp  SkyboxMaterial.h  StandardMaterial.h
Engine/Entity/Mesh/: CubeMesh.cpp
Engine/Entity/Scene/: SceneManager.cpp  SceneManager.h
Engine/Entity/System/: RenderableSystem.cpp  RenderableSystem.h
Engine/Graphics/: CMakeLists.txt  DrawingConstants.h  DrawingDevice.cpp  DrawingDevice.h  DrawingManager.cpp  DrawingManager.h  DrawingRawResource.h  DrawingResourceDesc.cpp  DrawingResourceDesc.h  DrawingResourceTable.cpp  DrawingResourceTable.h
Engine/Graphics/Device/: DrawingConstants.h  DrawingDevice.cpp  DrawingDevice.h  DrawingParameter.cpp  DrawingParameter.h  DrawingPass.cpp  DrawingPass.h  DrawingRawResource.h  DrawingResourceDesc.cpp  DrawingResourceDesc.h  DrawingResourceTable.cpp  DrawingResourceTable.h  DrawingType.h
Engine/Graphics/Device/D3D11/: DrawingDevice_D3D11.cpp  DrawingDevice_D3D11.h  DrawingRawResource_D3D11.cpp  DrawingRawResource_D3D11.h  DrawingUtil_D3D11.h
Engine/Graphics/Device/D3D12/: DrawingDevice_D3D12.cpp  DrawingDevice_D3D12.h  DrawingRawResource_D3D12.h  DrawingUtil_D3D12.h
Engine/Graphics/Renderer/: BaseRenderer.cpp  BaseRenderer.h  BasicPrimitiveRenderer.cpp  BasicPrimitiveRenderer.h  ForwardRenderer.cpp  ForwardRenderer.h  FrameGraph.cpp  FrameGraph.h
Engine/Interface/: IApplication.h  IDrawingDevice.h  IDrawingManager.h  IECS.h  IECSWorld.h  IEvent.h  IEventManager.h  IInput.h  IInputManager.h  ILog.h  ILogManager.h  IMaterial.h  IMesh.h  IRenderer.h  IRuntimeModule.h  ISceneManager.h  ITexture.h
Engine/Log/: CMakeLists.txt  InputLog.cpp  InputLog.h  SystemLog.cpp  SystemLog.h
Engine/Math/: Algorithm.h  Mat2x2.h  Mat2x2_imp.h  Mat3x3.h  Mat3x3_imp.h  Mat4x4.h  Mat4x4_imp.h  Vec2.h  Vec2_imp.h  Vec3.h  Vec3_imp.h  Vec4.h  Vec4_imp.h
Engine/Util/: FPS.h  Traits.h
Platform/: CMakeLists.txt
Platform/Default/: CMakeLists.txt  DefaultApplication.cpp
Platform/Windows/: CMakeLists.txt  WindowsApplication.cpp  WindowsApplication.h  WindowsInput.cpp  WindowsInput.h
Test/: CMakeLists.txt  EventTest.cpp
Test/Event/: CMakeLists.txt  EventTest.cpp
Test/Game/: CMakeLists.txt  GameTest.cpp
